# gmredis

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  conanfile.py  conanprofile.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: codecov.yml
.github/workflows/: ci.yml  claude-code-review.yml
docs/: command-dispatcher-design.md
lib/gmredis/: CMakeLists.txt
lib/gmredis/include/gmredis/: version.h
lib/gmredis/include/gmredis/command/: base_command.h  command.h  command_registry.h  command_selector.h  ping.h
lib/gmredis/include/gmredis/config/: config.h
lib/gmredis/include/gmredis/protocol/: parse.h  resp_v3.h  serialize.h
lib/gmredis/include/gmredis/storage/: kv.h
lib/gmredis/src/: version.cpp
lib/gmredis/src/command/: base_command.cpp  command.cpp  command_registry.cpp  command_registry_impl.h  command_selector_impl.cpp  command_selector_impl.h  ping.cpp
lib/gmredis/src/config/: config.cpp
lib/gmredis/src/protocol/: parse.cpp  serialize.cpp
lib/gmredis/src/storage/: kv_mem.cpp  kv_mem.h  kv_threading.cpp  kv_threading.h
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/acceptance/: CMakeLists.txt  parser_integration_test.cpp  smoke_test.cpp
tests/unit/: CMakeLists.txt  version_test.cpp
tests/unit/command/: base_command_test.cpp  command_registry_test.cpp  command_selector_test.cpp  command_test.cpp  ping_test.cpp
tests/unit/config/: config_test.cpp
tests/unit/protocol/: parse_test.cpp  serialize_test.cpp
tests/unit/storage/: kv_mem_test.cpp  kv_threaded_test.cpp
